# tta-reg-noniid

./: .gitignore  README.md  create_src_and_tgt_images.py  feature_stats.py  handlers.py  main.py  mnist.ipynb  plot_4seasons_labels.py  plot_ssa_batch_stat_error.py  plot_umap_features.py  pyproject.toml  sample.ipynb  save_encoder_features.py  train_feature.py  train_source.py  train_vbll.py  trainer.py  valid_feature_stats.py  weighted_valid_feature_stats.py
configs/: biwi-kinect_female_val_indices.npy  biwi-kinect_male_val_indices.npy  utkface-all_val_indices.npy
configs/feature_stats/: utkface-Res50-BN.yaml  utkface-Res50-GN.yaml  utkface-ViT16-LN.yaml
configs/train_source/: utkface-Res50-BN.yaml  utkface-Res50-GN.yaml  utkface-ViT16-LN.yaml
data/: __init__.py  biwi_kinect.py  data_configs.py  four_seasons.py  image_utils.py  non_iid.py  utkface.py
evaluation/: evaluator.py  four_seasons_eval.py  metrics.py
methods/: __init__.py  ada_ssa.py  adabn.py  base.py  er_ssa.py  init.py  mem_ssa.py  pa_ssa.py  rs_ssa.py  ssa.py  vm.py  wssa.py
methods/utils/: __init__.py  loss.py  pca_basis.py
models/arch/: Reg.py  Res.py  ViT.py  __init__.py
scripts/: extract_weights.py  remap_atloc_checkpoint.py
utils/: atloc_loss.py  config_process.py  seed.py  viz_label_stream.py
