[project]
name = "tta-reg-noniid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hydra-core>=1.3.2",
    "ignite>=1.1.0",
    "imagenet-c>=0.0.3",
    "matplotlib>=3.10.7",
    "numpy>=1.24.0,<2.0.0",
    "opencv-python>=3.4.18.65",
    "pandas>=2.3.3",
    "pathlib>=1.0.1",
    "pytorch-ignite>=0.5.3",
    "scikit-image>=0.25.2",
    "timm>=1.0.22",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "vbll>=0.4.9",
    "wandb>=0.22.3",
]

[dependency-groups]
dev = [
    "ruff>=0.14.3",
]
